--- a/online_library_client/src/pages/AuthPages.module.css
+++ b/online_library_client/src/pages/AuthPages.module.css
@@ -15,6 +15,8 @@
     font-family: 'Fredoka One', cursive;
     font-size: 18px;
     color: #004D94FF;
+    width: 100%;
+    text-align: center;
 }
 
 .input {
@@ -28,6 +30,10 @@
 
 .input:focus {
     outline: none;
+}
+
+.input::placeholder {
+    color: #6C80A191;
 }
 
 .button {
@@ -44,4 +50,18 @@
 
 .button:hover {
     transform: scale(1.1);
+}
+
+.invalid {
+    color: #EB000091;
+    border-bottom-color: #EB000091;
+}
+
+.swalTitle {
+    font-family: 'Fredoka One', cursive;
+    color: #005BADFF !important;
+}
+
+.swalErrors {
+    font-family: 'Fredoka One', cursive;
 }
