--- a/online_library_client/src/pages/AuthPages.module.css
+++ b/online_library_client/src/pages/AuthPages.module.css
@@ -13,7 +13,7 @@
 
 .label {
     font-family: 'Fredoka One', cursive;
-    font-size: 18px;
+    font-size: 24px;
     color: #004D94FF;
     width: 100%;
     text-align: center;
@@ -26,6 +26,8 @@
     border-right: none;
     font-family: 'Fredoka One', cursive;
     text-align: center;
+    width: 15vw;
+    font-size: 16px;
 }
 
 .input:focus {
